# Aadhaar-Hackathon

./: README.md  package.json
Binaries/: app.db
rn-client-app/: App.tsx  app.json  package-lock.json  package.json
rn-client-app/android/: build.gradle  settings.gradle
rn-client-app/android/app/: BUCK  build.gradle
rn-client-app/src/components/CheckIn/: CheckIn.tsx  connections.ts
rn-client-app/src/components/Help/: Help.tsx
rn-client-app/src/components/History/: History.tsx
rn-client-app/src/components/Profile/: Profile.tsx
rn-client-app/src/components/Settings/: Settings.tsx
rn-client-app/src/components/TabBar/: TabBar.tsx
verifier_app/: package-lock.json  package.json
verifier_app/public/: hotspot.txt
verifier_app/src/: App.js  App.tsx  index.tsx
verifier_app/src-tauri/: tauri.conf.json
verifier_backend_actix-rust/: .gitignore  Cargo.toml  app.db
verifier_backend_actix-rust/migrations/2021-10-29-043010_add_clients/: up.sql
verifier_backend_actix-rust/migrations/2021-10-29-053732_photo_field_added/: down.sql  up.sql
verifier_backend_actix-rust/migrations/2021-10-29-072617_test/: up.sql
verifier_backend_actix-rust/migrations/2021-10-29-073036_test1/: up.sql
verifier_backend_actix-rust/migrations/2021-10-29-081018_test/: up.sql
verifier_backend_actix-rust/migrations/2021-10-29-081018_test2/: up.sql
verifier_backend_actix-rust/migrations/2021-10-31-052014_test/: down.sql
verifier_backend_actix-rust/src/: errors.rs  main.rs  models.rs  routes.rs  schema.rs
verifier_fastify_backend/: package-lock.json  package.json
(+30 files in other folders)
