[package]
name = "verifier_backend_actix-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
derive_more = "0.99.2"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
actix-cors = "0.5.4"
